Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app
  namespace: ingress
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/app1"
          backend:
            service:
              name: app1-ingress
              port:
                number: 8080

        - pathType: Prefix
          path: "/app2"
          backend:
            service:
              name: app2-ingress
              port:
                number: 8080
